# llvm

./: CMakeLists.txt
cmake/host/: CMakeLists.txt
cmake/modules/: HandleLLVMOptions.cmake
lib/: CMakeLists.txt
lib/Analysis/: ConstantFolding.cpp
lib/MC/MCParser/: AsmParser.cpp
lib/Support/: CMakeLists.txt  LockFileManager.cpp
lib/Support/Unix/: Memory.inc  Path.inc  Program.inc  Signals.inc
lib/Transforms/: CMakeLists.txt
lib/Transforms/Hello/: CMakeLists.txt
lib/glibc-compat/: CMakeLists.txt
lib/glibc-compat/include/sys/: statvfs.h
lib/glibc-compat/src/: res_comp.c  res_data.c  res_init.c  res_libc.c
tools/bugpoint-passes/: CMakeLists.txt
tools/llvm-config/: CMakeLists.txt
